--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,9 +4,10 @@
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "types": []
+
   },
   "files": [
-    "src/main.ts"
+    "src/main.ts",
   ],
   "include": [
     "src/**/*.d.ts"
